--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -9,6 +9,8 @@
         "profile": "Thông tin",
         "emptyData": "Không có dữ liệu cần tra cứu!"
     },
+    "yes": "Đúng",
+    "no": "Sai",
     "getMoreData": "Lấy thêm dữ liệu?",
     "noData": "Không có dữ liệu",
     "save_continue": "Lưu và tiếp tục",
@@ -190,24 +192,29 @@
             "titleAdd": "Thêm Khách hàng",
             "titleEdit": "Cập nhật Khách hàng {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa Khách hàng {{name}} không ?",
-            "title": "Danh sách Khách hàng",
+            "titleView": "Xem chi tiết khách hàng {{name}}",
+            "titleList": "Danh sách Khách hàng",
             "id": "Id của khách hàng",
-            "cust_nm_v": "Tên tiếng Việt khách hàng",
-            "cust_nm_e": "Tên tiếng Anh khách hàng",
+            "cust_nm_v": "Tên khách hàng (TV)",
+            "cust_nm_e": "Tên khách hàng (TA)",
             "cust_nm_short": "Tên viết tắt",
-            "address": "địa chỉ",
-            "phone": "điện thoại",
+            "cust_tp": "Loại KH",
+            "individual_customers": "KH cá nhân",
+            "institutional_customers": "KH tổ chức",
+            "address": "Địa chỉ",
+            "phone": "Điện thoại",
             "fax": "Fax",
             "email": "Email",
-            "website": "địa chỉ website",
+            "website": "Website",
             "tax_cd": "Mã số thuế",
             "bank_acnt_no": "Số tài khoản NH",
             "bank_acnt_nm": "Tên chủ tài khoản",
             "bank_nm": "Tên ngân hàng",
+            "bank_cd": "Mã ngân hàng",
             "agent_nm": "Tên người đại diện",
             "agent_fun": "Chức vụ",
-            "agent_address": "địa chỉ",
-            "agent_phone": "điện thoại",
+            "agent_address": "Địa chỉ",
+            "agent_phone": "Điện thoại",
             "agent_email": "Email",
             "default_yn": "Khách hàng mặc định khi thêm mới một hóa đơn xuất không"
         },
