add warntime clone

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -486,7 +486,10 @@
             "titleEdit": "Cập nhật mốc cảnh báo HSD {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa mốc cảnh báo HSD {{name}} không ?",
             "titleList": "Mốc cảnh báo riêng theo sản phẩm",
+            "titleView": "Xem chi tiết cảnh báo",
             "titleNote": "Lưu ý: Chỉ thiết lập cho những SP có mốc cảnh báo khác với mốc cảnh báo chung ở trên",
+            "warn_amt": "Khoảng thời gian tính",
+            "warn_time_tp": "Id đơn vị thời gian",
             "productName": "Tên sản phẩm",
             "time": "Thời gian cảnh báo",
             "code": "Mã",
