add import component

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -20,6 +20,8 @@
     "viewDetail": "Xem chi tiết {{name}}",
     "updateUser": "Người cập nhật TT",
     "updateDate": "Thời gian cập nhật",
+    "normal": "Bình thường",
+    "cancelled": "Đã hủy",
     "loading": "Đang xử lý ...",
     "rowData": "dòng",
     "row_per_page": "Số dòng trên trang",
@@ -316,7 +318,7 @@
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
-            "title": "Danh sách đơn hàng nhập",
+            "titleList": "Danh sách đơn hàng nhập",
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
             "invoice_stat": "Trạng thái hóa đơn (mã)",
