fix import list

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -11,6 +11,9 @@
     },
     "yes": "Đúng",
     "no": "Sai",
+    "wrong_information": "Sai thông tin",
+    "cancel_import": "Hủy nhập",
+    "other_reason":"Lý do khác",
     "getMoreData": "Lấy thêm dữ liệu?",
     "noData": "Không có dữ liệu",
     "save_continue": "Lưu và tiếp tục",
@@ -318,6 +321,7 @@
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
+            "titleCancel": "Bạn có thực sự muốn hủy đơn nhập hàng {{name}} không?",
             "titleList": "Danh sách đơn hàng nhập",
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
