--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -318,6 +318,18 @@
     },
     "order": {
         "import": {
+            "productImportList": "Danh sách sản phẩm đơn nhập",
+            "productAdd": "Thêm sản phẩm vào đơn",
+            "import_type": "Loại hình nhập",
+            "import_type_buy": "Nhập mua",
+            "import_type_selloff": "Hàng khuyến mãi",
+            "lot_no": "Số lô",
+            "price": "Giá nhập",
+            "discount_per":"Phần trăm chiết khấu",
+            "vat_per":"Phầm trăm VAT",
+            "made_dt":"Ngày sản xuất",
+            "exp_dt":"Ngày hết HSD",
+            "qty":"Số lượng nhập",
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
@@ -503,7 +515,7 @@
             "titleView": "Xem chi tiết cảnh báo",
             "titleNote": "Lưu ý: Chỉ thiết lập cho những SP có mốc cảnh báo khác với mốc cảnh báo chung ở trên",
             "warn_amt": "Khoảng thời gian tính",
-            "warn_time_tp": "Id đơn vị thời gian",
+            "warn_time_tp": "Đơn vị thời gian",
             "productName": "Tên sản phẩm",
             "time": "Thời gian cảnh báo",
             "code": "Mã",
