--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -2,7 +2,7 @@
     "stt": "STT",
     "lbl": {
         "welcome": "Chào mừng bạn đến với ứng dụng",
-        "search": "Tìm kiếm ...",
+        "search": "Thông tin tìm kiếm",
         "rowsPerPage": "Dòng trên trang",
         "edit": "Cập nhật",
         "action": "Thao tác",
@@ -318,6 +318,7 @@
     },
     "order": {
         "import": {
+            "invoice_info": "Thông tin hóa đơn",
             "productImportList": "Danh sách sản phẩm đơn nhập",
             "productAdd": "Thêm sản phẩm vào đơn",
             "import_type": "Loại hình nhập",
@@ -325,13 +326,14 @@
             "import_type_selloff": "Hàng khuyến mãi",
             "lot_no": "Số lô",
             "price": "Giá nhập",
-            "discount_per":"Phần trăm chiết khấu",
-            "vat_per":"Phầm trăm VAT",
-            "made_dt":"Ngày sản xuất",
-            "exp_dt":"Ngày hết HSD",
-            "qty":"Số lượng nhập",
+            "discount_per": "Phần trăm chiết khấu",
+            "vat_per": "Phầm trăm VAT",
+            "made_dt": "Ngày sản xuất",
+            "exp_dt": "Ngày hết HSD",
+            "qty": "Số lượng nhập",
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
+            "titleView":"Xem chi tiết hóa đơn {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
             "titleCancel": "Bạn có thực sự muốn hủy đơn nhập hàng {{name}} không?",
             "titleList": "Danh sách đơn hàng nhập",
@@ -349,11 +351,12 @@
             "invoice_val": "Tổng giá trị hđ",
             "invoice_discount": "Tổng tiền chiết khấu",
             "invoice_vat": "Tổng tiền thuế VAT",
+            "invoice_needpay": "Tổng tiền phải trả",
             "invoice_settl": "Tổng tiền đã thanh toán",
             "invoice_auto": "Hoá đơn tự động",
             "note": "Ghi chú",
-            "start_date" : "Ngày bắt đầu",
-            "end_date" : "Ngày kết thúc",
+            "start_date": "Ngày bắt đầu",
+            "end_date": "Ngày kết thúc",
             "input_dt": "Ngày tạo hóa đơn",
             "inv_values": "Giá trị hóa đơn",
             "person_s": "Người giao hàng",
@@ -364,6 +367,7 @@
         "ins_import": {
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
+            "productEdit": "Chỉnh sửa sản phẩm nhập",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
             "title": "Danh sách đơn hàng nhập",
             "invoice_no": "Tên đơn nhập",
@@ -374,26 +378,26 @@
             "id": "Id của đơn nhập",
             "invoice_stat": "Trạng thái hóa đơn (mã)",
             "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
-            "vender_nm_v": "Nhà cung ứng (tên)",
+            "vender_nm_v": "Nhà cung ứng",
             "input_dt": "Ngày tạo hóa đơn",
             "inv_values": "Giá trị hóa đơn",
             "id_detail": "Id của dòng dữ liệu hiện tại",
             "qr_code": "Mã qr code của sản phẩm",
             "invoice_id": "Id của đơn nhập hiện tại",
             "imp_tp": "Loại nhập (mã)",
-            "imp_tp_nm": "Loại nhập (tên)",
+            "imp_tp_nm": "Loại nhập",
             "prod_id": "Id sản phẩm",
             "prod_nm": "Tên sản phẩm",
             "lot_no": "Số lô của sản phẩm",
-            "made_dt": "Ngày sản xuất (ddmmyyyy)",
-            "exp_dt": "Ngày hết HSD (ddmmyyyy)",
+            "made_dt": "Ngày sản xuất",
+            "exp_dt": "Ngày hết HSD ",
             "qty": "Khối lượng nhập",
             "unit_id": "Đơn vị tính (mã)",
-            "unit_nm": "Đơn vị tính (tên)",
+            "unit_nm": "Đơn vị tính",
             "price": "Giá nhập",
             "vals": "Thành tiền",
-            "vat_per": "Phầm trăm thuế VAT",
-            "discount_per": "Phần trăm discount",
+            "vat_per": "% VAT",
+            "discount_per": "% Chiết khấu",
             "upd_user": "Người cập nhật TT",
             "upd_date": "Thời gian cập nhật"
         },
@@ -511,7 +515,7 @@
             "titleAdd": "Thêm mốc cảnh báo HSD",
             "titleEdit": "Cập nhật mốc cảnh báo HSD {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa mốc cảnh báo HSD {{name}} không ?",
-            "titleList": "Mốc cảnh báo riêng theo sản phẩm",
+            "titleList": "Danh sách mốc cảnh báo riêng theo sản phẩm",
             "titleView": "Xem chi tiết cảnh báo",
             "titleNote": "Lưu ý: Chỉ thiết lập cho những SP có mốc cảnh báo khác với mốc cảnh báo chung ở trên",
             "warn_amt": "Khoảng thời gian tính",
