fix layout & add screen import/import inventory

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -18,6 +18,8 @@
     "search_btn": "Tìm kiếm",
     "getMoreData": "Lấy thêm dữ liệu?",
     "noData": "Không có dữ liệu",
+    "wrongData": "Dữ liệu bị lỗi",
+    "can_not_found_id_invoice_please_try_again":"Không tìm thấy id hóa đơn, vui lòng thử lại",
     "save_continue": "Lưu và tiếp tục",
     "titleBranch": "Chi nhánh thực hiện",
     "createdUser": "Người thực hiện",
@@ -55,8 +57,8 @@
         "settlement": "Công nợ",
         "report": "Báo cáo",
         "config": "Cấu hình",
-        "importOrder": "Đơn nhập",
-        "importinven": "Nhập tồn",
+        "importOrder": "Đơn nhập hàng",
+        "importinven": "Đơn nhập tồn",
         "exportOrder": "Đơn xuất",
         "exportRepay": "Xuất trả hàng",
         "exportDestroy": "Xuất hủy",
@@ -85,6 +87,7 @@
         "logout": "Đăng Xuất"
     },
     "btn": {
+        "update": "Cập nhật",
         "login": "Đăng nhập",
         "regist": "Đăng ký",
         "add": "Thêm mới",
@@ -339,7 +342,54 @@
             "titleList": "Danh sách đơn hàng nhập",
             "id": "Id của đơn nhập",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
+            "invoice_stat": "Trạng thái hóa đơn",
+            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
+            "vender_id": "Nhà cung ứng (mã)",
+            "vender_nm_v": "Nhà cung ứng (tên)",
+            "vender_nm": "Nhà cung ứng",
+            "order_dt": "Ngày nhập hàng",
+            "cancel_reason": "Lý do hủy",
+            "total_prod": "Tổng loại sp nhập",
+            "invoice_type": "Loại hóa đơn",
+            "invoice_val": "Tổng giá trị hđ",
+            "invoice_discount": "Tổng tiền chiết khấu",
+            "invoice_vat": "Tổng tiền thuế VAT",
+            "invoice_needpay": "Tổng tiền phải trả",
+            "invoice_settl": "Tổng tiền đã thanh toán",
+            "invoice_auto": "Hoá đơn tự động",
+            "note": "Ghi chú",
+            "start_date": "Ngày bắt đầu",
+            "end_date": "Ngày kết thúc",
+            "input_dt": "Ngày tạo hóa đơn",
+            "inv_values": "Giá trị hóa đơn",
+            "person_s": "Người giao hàng",
+            "person_r": "Người nhận hàng",
+            "upd_user": "Người cập nhật TT",
+            "upd_date": "Thời gian cập nhật"
+        },
+        "importInventory": {
+            "invoice_info": "Thông tin hóa đơn nhập tồn",
+            "productImportList": "Danh sách sản phẩm đơn nhập tồn",
+            "productAdd": "Thêm sản phẩm vào đơn nhập tồn",
+            "import_type": "Loại hình nhập",
+            "import_type_buy": "Nhập mua",
+            "import_type_selloff": "Hàng khuyến mãi",
+            "lot_no": "Số lô",
+            "price": "Giá nhập",
+            "discount_per": "Phần trăm chiết khấu",
+            "vat_per": "Phầm trăm VAT",
+            "made_dt": "Ngày sản xuất",
+            "exp_dt": "Ngày hết HSD",
+            "qty": "Số lượng nhập",
+            "titleAdd": "Thêm đơn hàng nhập tồn",
+            "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
+            "titleView":"Xem chi tiết hóa đơn {{name}}",
+            "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
+            "titleCancel": "Bạn có thực sự muốn hủy đơn nhập hàng {{name}} không?",
+            "titleList": "Danh sách đơn hàng nhập tồn",
+            "id": "Id của đơn nhập",
+            "invoice_no": "Số hóa đơn",
+            "invoice_stat": "Trạng thái hóa đơn",
             "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
             "vender_id": "Nhà cung ứng (mã)",
             "vender_nm_v": "Nhà cung ứng (tên)",
