--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -19,7 +19,7 @@
     "getMoreData": "Lấy thêm dữ liệu?",
     "noData": "Không có dữ liệu",
     "wrongData": "Dữ liệu bị lỗi",
-    "can_not_found_id_invoice_please_try_again":"Không tìm thấy id hóa đơn, vui lòng thử lại",
+    "can_not_found_id_invoice_please_try_again": "Không tìm thấy id hóa đơn, vui lòng thử lại",
     "save_continue": "Lưu và tiếp tục",
     "titleBranch": "Chi nhánh thực hiện",
     "createdUser": "Người thực hiện",
@@ -59,7 +59,7 @@
         "config": "Cấu hình",
         "importOrder": "Đơn nhập hàng",
         "importinven": "Đơn nhập tồn",
-        "exportOrder": "Đơn xuất",
+        "exportOrder": "Đơn xuất - bán",
         "exportRepay": "Xuất trả hàng",
         "exportDestroy": "Xuất hủy",
         "supplier": "Nhà cung ứng",
@@ -336,7 +336,7 @@
             "qty": "Số lượng nhập",
             "titleAdd": "Thêm đơn hàng nhập",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
-            "titleView":"Xem chi tiết hóa đơn {{name}}",
+            "titleView": "Xem chi tiết hóa đơn {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
             "titleCancel": "Bạn có thực sự muốn hủy đơn nhập hàng {{name}} không?",
             "titleList": "Danh sách đơn hàng nhập",
@@ -383,7 +383,7 @@
             "qty": "Số lượng nhập",
             "titleAdd": "Thêm đơn hàng nhập tồn",
             "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
-            "titleView":"Xem chi tiết hóa đơn {{name}}",
+            "titleView": "Xem chi tiết hóa đơn {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
             "titleCancel": "Bạn có thực sự muốn hủy đơn nhập hàng {{name}} không?",
             "titleList": "Danh sách đơn hàng nhập tồn",
@@ -441,7 +441,7 @@
             "lot_no": "Số lô của sản phẩm",
             "made_dt": "Ngày sản xuất",
             "exp_dt": "Ngày hết HSD ",
-            "qty": "Khối lượng nhập",
+            "qty": "Số lượng nhập",
             "unit_id": "Đơn vị tính (mã)",
             "unit_nm": "Đơn vị tính",
             "price": "Giá nhập",
@@ -452,6 +452,10 @@
             "upd_date": "Thời gian cập nhật"
         },
         "export": {
+            "productAdd": "Thêm sản phẩm vào đơn xuất - bán",
+            "invoice_info": "Thông tin hóa đơn xuất - bán",
+            "productExportList": "Danh sách xuất hàng",
+            "titleList": "Danh sách đơn xuất - bán",
             "titleAdd": "Thêm đơn hàng xuất",
             "titleEdit": "Cập nhật đơn hàng xuất {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng xuất {{name}} không ?",
@@ -459,15 +463,39 @@
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
             "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
-            "cust_id": "khách hàng (mã)",
-            "cust_nm_v": "khách hàng (tên)",
+            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "export_type": "Loại hình xuất",
+            "export_type_buy": "Xuất bán",
+            "export_type_selloff": "Hàng khuyến mãi",
+            "cust_id": "Mã khách hàng",
+            "cust_nm_v": "Tên khách hàng",
+            "customer_nm": "Khách hàng",
+            "order_dt": "Ngày xuất hàng",
             "input_dt": "Ngày tạo hóa đơn",
-            "staff_exp": "Nhân viên xuất bán (mã)",
-            "staff_nm": "Nhân viên xuất bán (tên)",
+            "lot_no": "Số lô của sản phẩm",
+            "person_s": "Người giao hàng",
+            "person_r": "Người nhận hàng",
+            "cancel_reason": "Lý do hủy",
+            "invoice_type": "Loại hóa đơn",
+            "invoice_val": "Tổng giá trị hđ",
+            "invoice_discount": "Tổng tiền chiết khấu",
+            "invoice_vat": "Tổng tiền thuế VAT",
+            "invoice_needpay": "Tổng tiền phải trả",
+            "invoice_settl": "Tổng tiền đã thanh toán",
+            "invoice_auto": "Hoá đơn tự động",
+            "staff_exp": "Nhân viên xuất",
+            "staff_nm": "Nhân viên xuất",
+            "price": "Giá xuất",
+            "vals": "Thành tiền",
+            "vat_per": "% VAT",
+            "qty": "Số lượng xuất",
+            "discount_per": "% Chiết khấu",
+            "total_prod": "Tổng loại sp xuất",
             "note": "Ghi chú",
             "upd_user": "Người cập nhật TT",
             "upd_date": "Thời gian cập nhật",
+            "start_date": "Ngày bắt đầu",
+            "end_date": "Ngày kết thúc",
             "inv_values": "Giá trị của đơn xuất"
         },
         "ins_export": {
@@ -477,27 +505,29 @@
             "title": "Danh sách đơn hàng xuất",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
-            "cust_id": "khách hàng (mã)",
-            "cust_nm_v": "khách hàng (tên)",
+            "invoice_stat": "Mã trạng thái hđ",
+            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "cust_id": "Mã khách hàng",
+            "cust_nm_v": "Tên khách hàng",
             "input_dt": "Ngày tạo hóa đơn",
-            "staff_exp": "Nhân viên xuất bán (mã)",
-            "staff_nm": "Nhân viên xuất bán (tên)",
+            "staff_exp": "Mã nhân viên xuất",
+            "staff_nm": "Tên nhân viên xuất",
             "note": "Ghi chú",
             "upd_user": "Người cập nhật TT",
             "upd_date": "Thời gian cập nhật",
             "inv_values": "Giá trị của đơn xuất",
             "id_detail": "Id của dòng dữ liệu hiện tại",
             "invoice-detail_id": "Id của đơn xuất hiện tại",
-            "exp_tp": "Loại xuất (mã)",
-            "exp_tp_nm": "Loại xuất (tên)",
+            "exp_tp": "Mã loại xuất",
+            "exp_tp_nm": "Loại xuất",
+            "vat_per": "% VAT",
+            "discount_per": "% Chiết khấu",
             "prod_id": "Id sản phẩm",
             "prod_nm": "Tên sản phẩm",
             "lot_no": "Số lô của sản phẩm",
-            "qty": "Khối lượng xuất",
-            "unit_id": "Đơn vị tính (mã)",
-            "unit_nm": "Đơn vị tính (tên)",
+            "qty": "Số lượng xuất",
+            "unit_id": "Mã đơn vị tính",
+            "unit_nm": "Đơn vị tính",
             "price": "Giá xuất",
             "vals": "Thành tiền"
         }
