--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -13,6 +13,7 @@
     "no": "Sai",
     "wrong_information": "Sai thông tin",
     "cancel_import": "Hủy nhập",
+    "cancel_export": "Hủy xuất",
     "other_reason": "Lý do khác",
     "search_information": "Thông tin tìm kiếm",
     "search_btn": "Tìm kiếm",
@@ -321,6 +322,7 @@
     },
     "order": {
         "import": {
+            "reason": "Lý do",
             "invoice_info": "Thông tin hóa đơn",
             "productImportList": "Danh sách sản phẩm đơn nhập",
             "productAdd": "Thêm sản phẩm vào đơn",
@@ -357,6 +359,14 @@
             "invoice_needpay": "Tổng tiền phải trả",
             "invoice_settl": "Tổng tiền đã thanh toán",
             "invoice_auto": "Hoá đơn tự động",
+            "imp_tp": "Loại nhập (mã)",
+            "imp_tp_nm": "Loại nhập",
+            "prod_id": "Id sản phẩm",
+            "prod_nm": "Tên sản phẩm",
+            "unit_id": "Đơn vị tính (mã)",
+            "unit_nm": "Đơn vị tính",
+            "vals": "Thành tiền",
+            "productEdit": "Chỉnh sửa sản phẩm nhập",
             "note": "Ghi chú",
             "start_date": "Ngày bắt đầu",
             "end_date": "Ngày kết thúc",
@@ -395,6 +405,7 @@
             "vender_nm_v": "Nhà cung ứng (tên)",
             "vender_nm": "Nhà cung ứng",
             "order_dt": "Ngày nhập hàng",
+            "reason":"Lý do",
             "cancel_reason": "Lý do hủy",
             "total_prod": "Tổng loại sp nhập",
             "invoice_type": "Loại hóa đơn",
@@ -411,43 +422,6 @@
             "inv_values": "Giá trị hóa đơn",
             "person_s": "Người giao hàng",
             "person_r": "Người nhận hàng",
-            "upd_user": "Người cập nhật TT",
-            "upd_date": "Thời gian cập nhật"
-        },
-        "ins_import": {
-            "titleAdd": "Thêm đơn hàng nhập",
-            "titleEdit": "Cập nhật đơn hàng nhập {{name}}",
-            "productEdit": "Chỉnh sửa sản phẩm nhập",
-            "titleRemove": "Bạn có thực sự muốn xóa đơn hàng nhập {{name}} không ?",
-            "title": "Danh sách đơn hàng nhập",
-            "invoice_no": "Tên đơn nhập",
-            "vender_id": "Id nhà cung ứng",
-            "person_s": "Người giao hàng",
-            "person_r": "Người nhận hàng",
-            "invoice_auto": "Hoán đơn tự động",
-            "id": "Id của đơn nhập",
-            "invoice_stat": "Trạng thái hóa đơn (mã)",
-            "invoice_stat_nm": "Trạng thái hóa đơn (tên)",
-            "vender_nm_v": "Nhà cung ứng",
-            "input_dt": "Ngày tạo hóa đơn",
-            "inv_values": "Giá trị hóa đơn",
-            "id_detail": "Id của dòng dữ liệu hiện tại",
-            "qr_code": "Mã qr code của sản phẩm",
-            "invoice_id": "Id của đơn nhập hiện tại",
-            "imp_tp": "Loại nhập (mã)",
-            "imp_tp_nm": "Loại nhập",
-            "prod_id": "Id sản phẩm",
-            "prod_nm": "Tên sản phẩm",
-            "lot_no": "Số lô của sản phẩm",
-            "made_dt": "Ngày sản xuất",
-            "exp_dt": "Ngày hết HSD ",
-            "qty": "Số lượng nhập",
-            "unit_id": "Đơn vị tính (mã)",
-            "unit_nm": "Đơn vị tính",
-            "price": "Giá nhập",
-            "vals": "Thành tiền",
-            "vat_per": "% VAT",
-            "discount_per": "% Chiết khấu",
             "upd_user": "Người cập nhật TT",
             "upd_date": "Thời gian cập nhật"
         },
@@ -496,40 +470,119 @@
             "upd_date": "Thời gian cập nhật",
             "start_date": "Ngày bắt đầu",
             "end_date": "Ngày kết thúc",
+            "exp_tp": "Mã loại xuất",
+            "exp_tp_nm": "Loại xuất",
+            "prod_id": "Id sản phẩm",
+            "prod_nm": "Tên sản phẩm",
+            "unit_id": "Mã đơn vị tính",
+            "unit_nm": "Đơn vị tính",
             "inv_values": "Giá trị của đơn xuất"
         },
-        "ins_export": {
-            "titleAdd": "Thêm đơn hàng xuất",
+        "exportRepay": {
+            "productAdd": "Thêm sản phẩm vào đơn xuất - trả",
+            "invoice_info": "Thông tin hóa đơn xuất - trả",
+            "productExportRepayList": "Danh sách xuất hàng - trả",
+            "titleList": "Danh sách đơn xuất - trả",
+            "titleAdd": "Thêm đơn hàng xuất trả",
             "titleEdit": "Cập nhật đơn hàng xuất {{name}}",
             "titleRemove": "Bạn có thực sự muốn xóa đơn hàng xuất {{name}} không ?",
-            "title": "Danh sách đơn hàng xuất",
+            "title": "Danh sách đơn hàng xuất - trả",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
-            "invoice_stat": "Mã trạng thái hđ",
+            "invoice_stat": "Trạng thái hóa đơn (mã)",
             "invoice_stat_nm": "Trạng thái hóa đơn",
-            "cust_id": "Mã khách hàng",
-            "cust_nm_v": "Tên khách hàng",
+            "exportRepay_type": "Loại hình xuất",
+            "exportRepay_type_buy": "Xuất trả",
+            "exportRepay_type_selloff": "Hàng khuyến mãi",
+            "supplier_id": "Mã khách hàng",
+            "supplier_nm_v": "Tên nhà cung ứng",
+            "supplier_nm": "Tên nhà cung ứng",
+            "order_dt": "Ngày xuất hàng",
             "input_dt": "Ngày tạo hóa đơn",
-            "staff_exp": "Mã nhân viên xuất",
-            "staff_nm": "Tên nhân viên xuất",
+            "lot_no": "Số lô của sản phẩm",
+            "person_s": "Người giao hàng",
+            "person_r": "Người nhận hàng",
+            "cancel_reason": "Lý do hủy",
+            "invoice_type": "Loại hóa đơn",
+            "invoice_val": "Tổng giá trị hđ",
+            "invoice_discount": "Tổng tiền chiết khấu",
+            "invoice_vat": "Tổng tiền thuế VAT",
+            "invoice_needpay": "Tổng tiền phải trả",
+            "invoice_settl": "Tổng tiền đã thanh toán",
+            "invoice_auto": "Hoá đơn tự động",
+            "staff_exp": "Nhân viên xuất",
+            "staff_nm": "Nhân viên xuất",
+            "price": "Giá xuất",
+            "vals": "Thành tiền",
+            "vat_per": "% VAT",
+            "qty": "Số lượng xuất",
+            "discount_per": "% Chiết khấu",
+            "total_prod": "Tổng loại sp xuất",
             "note": "Ghi chú",
             "upd_user": "Người cập nhật TT",
             "upd_date": "Thời gian cập nhật",
-            "inv_values": "Giá trị của đơn xuất",
-            "id_detail": "Id của dòng dữ liệu hiện tại",
-            "invoice-detail_id": "Id của đơn xuất hiện tại",
+            "start_date": "Ngày bắt đầu",
+            "end_date": "Ngày kết thúc",
             "exp_tp": "Mã loại xuất",
             "exp_tp_nm": "Loại xuất",
-            "vat_per": "% VAT",
-            "discount_per": "% Chiết khấu",
             "prod_id": "Id sản phẩm",
             "prod_nm": "Tên sản phẩm",
-            "lot_no": "Số lô của sản phẩm",
-            "qty": "Số lượng xuất",
             "unit_id": "Mã đơn vị tính",
             "unit_nm": "Đơn vị tính",
+            "inv_values": "Giá trị của đơn xuất"
+        },
+        "exportDestroy": {
+            "exp_dt": "Ngày xuất hàng",
+            "reason_tp": "Lý do hủy",
+            "cancel_by_out_of_date": "Hủy do hết HSD",
+            "cancel_by_lost_goods": "Hủy do hết HSD",
+            "prod_nm": "Sản phẩm",
+            "unit_nm": "Đơn vị tính",
+            "cancel_by_inventory_balance": "Hủy do hết HSD",
+            "productAdd": "Thêm sản phẩm vào đơn xuất - hủy",
+            "invoice_info": "Thông tin hóa đơn xuất - hủy",
+            "productExportDestroyList": "Danh sách xuất hàng - hủy",
+            "titleList": "Danh sách đơn xuất - hủy",
+            "titleAdd": "Thêm hóa đơn xuất hủy",
+            "titleEdit": "Cập nhật hóa đơn xuất {{name}}",
+            "titleCancel": "Bạn có thực sự muốn hủy hóa đơn xuất {{name}} không ?",
+            "title": "Danh sách hóa đơn xuất - hủy",
+            "id": "Id của đơn xuất",
+            "invoice_no": "Số hóa đơn",
+            "invoice_stat": "Trạng thái hóa đơn (mã)",
+            "invoice_stat_nm": "Trạng thái hóa đơn",
+            "exportRepay_type": "Loại hình xuất",
+            "exportRepay_type_buy": "Xuất hủy",
+            "exportRepay_type_selloff": "Hàng khuyến mãi",
+            "supplier_id": "Mã khách hàng",
+            "supplier_nm_v": "Tên nhà cung ứng",
+            "supplier_nm": "Tên nhà cung ứng",
+            "order_dt": "Ngày xuất hàng",
+            "input_dt": "Ngày tạo hóa đơn",
+            "lot_no": "Số lô của sản phẩm",
+            "cancel_reason": "Lý do hủy",
+            "reason": "Lý do",
+            "invoice_type": "Loại hóa đơn",
+            "invoice_val": "Tổng giá trị hđ",
+            "invoice_discount": "Tổng tiền chiết khấu",
+            "invoice_vat": "Tổng tiền thuế VAT",
+            "invoice_needpay": "Tổng tiền phải trả",
+            "invoice_settl": "Tổng tiền đã thanh toán",
+            "invoice_auto": "Hoá đơn tự động",
+            "staff_exp": "Nhân viên xuất",
+            "staff_nm": "Nhân viên xuất",
             "price": "Giá xuất",
-            "vals": "Thành tiền"
+            "vals": "Thành tiền",
+            "vat_per": "% VAT",
+            "qty": "Số lượng xuất",
+            "discount_per": "% Chiết khấu",
+            "total_prod": "Tổng loại sp xuất",
+            "note": "Ghi chú",
+            "upd_user": "Người cập nhật TT",
+            "upd_date": "Thời gian cập nhật",
+            "start_date": "Ngày bắt đầu",
+            "end_date": "Ngày kết thúc",
+            "inv_values": "Giá trị của đơn xuất"
         }
     },
     "config": {
