--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -535,10 +535,10 @@
             "exp_dt": "Ngày xuất hàng",
             "reason_tp": "Lý do hủy",
             "cancel_by_out_of_date": "Hủy do hết HSD",
-            "cancel_by_lost_goods": "Hủy do hết HSD",
+            "cancel_by_lost_goods": "Hủy do hàng bị mất - hư hỏng",
             "prod_nm": "Sản phẩm",
             "unit_nm": "Đơn vị tính",
-            "cancel_by_inventory_balance": "Hủy do hết HSD",
+            "cancel_by_inventory_balance": "Hủy để cân đối hàng tồn sau kiểm kê",
             "productAdd": "Thêm sản phẩm vào đơn xuất - hủy",
             "invoice_info": "Thông tin hóa đơn xuất - hủy",
             "productExportDestroyList": "Danh sách xuất hàng - hủy",
