--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -406,7 +406,7 @@
             "vender_nm_v": "Nhà cung ứng (tên)",
             "vender_nm": "Nhà cung ứng",
             "order_dt": "Ngày nhập hàng",
-            "reason":"Lý do",
+            "reason": "Lý do",
             "cancel_reason": "Lý do hủy",
             "total_prod": "Tổng loại sp nhập",
             "invoice_type": "Loại hóa đơn",
@@ -433,7 +433,7 @@
             "titleList": "Danh sách đơn xuất - bán",
             "titleAdd": "Thêm đơn hàng xuất",
             "titleEdit": "Cập nhật đơn hàng xuất {{name}}",
-            "titleRemove": "Bạn có thực sự muốn xóa đơn hàng xuất {{name}} không ?",
+            "titleCancel": "Bạn có thực sự muốn hủy đơn hàng xuất {{name}} không ?",
             "title": "Danh sách đơn hàng xuất",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
@@ -450,6 +450,7 @@
             "lot_no": "Số lô của sản phẩm",
             "person_s": "Người giao hàng",
             "person_r": "Người nhận hàng",
+            "reason": "Lý do",
             "cancel_reason": "Lý do hủy",
             "invoice_type": "Loại hóa đơn",
             "invoice_val": "Tổng giá trị hđ",
@@ -486,7 +487,7 @@
             "titleList": "Danh sách đơn xuất - trả",
             "titleAdd": "Thêm đơn hàng xuất trả",
             "titleEdit": "Cập nhật đơn hàng xuất {{name}}",
-            "titleRemove": "Bạn có thực sự muốn xóa đơn hàng xuất {{name}} không ?",
+            "titleCancel": "Bạn có thực sự muốn hủy đơn hàng xuất {{name}} không ?",
             "title": "Danh sách đơn hàng xuất - trả",
             "id": "Id của đơn xuất",
             "invoice_no": "Số hóa đơn",
@@ -503,6 +504,7 @@
             "lot_no": "Số lô của sản phẩm",
             "person_s": "Người giao hàng",
             "person_r": "Người nhận hàng",
+            "reason": "Lý do",
             "cancel_reason": "Lý do hủy",
             "invoice_type": "Loại hóa đơn",
             "invoice_val": "Tổng giá trị hđ",
