--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -428,6 +428,7 @@
         },
         "export": {
             "productAdd": "Thêm sản phẩm vào đơn xuất - bán",
+            "productEdit": "Chỉnh sửa sản phẩm trong đơn xuất - bán",
             "invoice_info": "Thông tin hóa đơn xuất - bán",
             "productExportList": "Danh sách xuất hàng",
             "titleList": "Danh sách đơn xuất - bán",
@@ -482,6 +483,7 @@
         },
         "exportRepay": {
             "productAdd": "Thêm sản phẩm vào đơn xuất - trả",
+            "productEdit": "Chỉnh sửa sản phẩm trong đơn xuất - trả",
             "invoice_info": "Thông tin hóa đơn xuất - trả",
             "productExportRepayList": "Danh sách xuất hàng - trả",
             "titleList": "Danh sách đơn xuất - trả",
@@ -535,6 +537,7 @@
             "inv_values": "Giá trị của đơn xuất"
         },
         "exportDestroy": {
+            "productEdit": "Chỉnh sửa sản phẩm trong đơn xuất - hủy",
             "exp_dt": "Ngày xuất hàng",
             "reason_tp": "Lý do hủy",
             "cancel_by_out_of_date": "Hủy do hết HSD",
