add report import time

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -21,6 +21,9 @@
     "noData": "Không có dữ liệu",
     "wrongData": "Dữ liệu bị lỗi",
     "can_not_found_id_invoice_please_try_again": "Không tìm thấy id hóa đơn, vui lòng thử lại",
+    "invoice_no": "Mã hóa đơn",
+    "invoice_status": "Trạng thái hóa đơn",
+    "all": "Tất cả",
     "save_continue": "Lưu và tiếp tục",
     "titleBranch": "Chi nhánh thực hiện",
     "createdUser": "Người thực hiện",
@@ -59,6 +62,7 @@
         "report": "Báo cáo",
         "config": "Cấu hình",
         "importOrder": "Đơn nhập hàng",
+        "importTime": "Báo cáo nhập hàng",
         "importinven": "Đơn nhập tồn",
         "exportOrder": "Đơn xuất - bán",
         "exportRepay": "Xuất trả hàng",
@@ -366,7 +370,7 @@
             "prod_nm": "Tên sản phẩm",
             "unit_id": "Đơn vị tính (mã)",
             "unit_nm": "Đơn vị tính",
-            "vals": "Thành tiền",
+            "vals": "Tiền phải trả",
             "productEdit": "Chỉnh sửa sản phẩm nhập",
             "note": "Ghi chú",
             "start_date": "Ngày bắt đầu",
