--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -24,6 +24,14 @@
     "invoice_no": "Mã hóa đơn",
     "invoice_status": "Trạng thái hóa đơn",
     "all": "Tất cả",
+    "import_payment": "Thanh toán nhập hàng",
+    "collecting_sales": "Thu tiền bán hàng",
+    "collecting_import_repay": "Thu tiền trả hàng",
+    "import_payment_list": "Danh sách thanh toán nhập hàng",
+    "collecting_sales_list": "Danh sách thu tiền bán hàng",
+    "collecting_import_repay_list": "Danh sách thu tiền trả hàng",
+    "list_of_products_in_stock_with_lot_details": "Danh sách sản phẩm tồn chi tiết lô",
+    "note": "Ghi chú",
     "save_continue": "Lưu và tiếp tục",
     "titleBranch": "Chi nhánh thực hiện",
     "createdUser": "Người thực hiện",
@@ -264,6 +272,25 @@
         }
     },
     "report": {
+        "payment_amount": "Số tiền thanh toán",
+        "payment_method": "Phương thức thanh toán",
+        "payment_date": "Ngày thanh toán",
+        "invoice_val": "Giá trị HĐ",
+        "bank_transf_acc_number": "Số TK chuyển",
+        "bank_transf_acc_name": "Tên chủ TK chuyển",
+        "bank_transf_name": "Tên ngân hàng chuyển",
+        "bank_recei_acc_number": "Số TK nhận",
+        "bank_recei_acc_name": "Tên chủ TK nhận",
+        "bank_recei_name": "Tên ngân hàng nhận",
+        "lot_no": "Số lô",
+        "import_type": "Loại hàng",
+        "inven": "Hàng tồn",
+        "all": "Tất cả",
+        "inven_qty": "Số lượng tồn",
+        "imp_qty": "Số lượng nhập",
+        "exp_qty": "Số lượng xuất bán",
+        "exp_qty_rp": "Số lượng xuất trả",
+        "exp_qty_cacl": "Số lượng xuất hủy",
         "warn_exp": {
             "title": "Danh sách cảnh báo hết hạn",
             "prod_nm": "Tên sản phẩm",
