add export excel

--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -31,6 +31,7 @@
     "collecting_sales_list": "Danh sách thu tiền bán hàng",
     "collecting_import_repay_list": "Danh sách thu tiền trả hàng",
     "list_of_products_in_stock_with_lot_details": "Danh sách sản phẩm tồn chi tiết lô",
+    "exportExcel": "Tải dữ liệu",
     "note": "Ghi chú",
     "save_continue": "Lưu và tiếp tục",
     "titleBranch": "Chi nhánh thực hiện",
@@ -286,11 +287,14 @@
         "import_type": "Loại hàng",
         "inven": "Hàng tồn",
         "all": "Tất cả",
+        "vat_per": "%VAT",
+        "discount_per": "% Chiết khấu",
         "inven_qty": "Số lượng tồn",
         "imp_qty": "Số lượng nhập",
         "exp_qty": "Số lượng xuất bán",
         "exp_qty_rp": "Số lượng xuất trả",
         "exp_qty_cacl": "Số lượng xuất hủy",
+        "reason_tp_nm": "Lý do hủy",
         "warn_exp": {
             "title": "Danh sách cảnh báo hết hạn",
             "prod_nm": "Tên sản phẩm",
