--- a/src/asset/translation/vn.json
+++ b/src/asset/translation/vn.json
@@ -223,7 +223,7 @@
             "titleView": "Xem chi tiết khách hàng {{name}}",
             "titleList": "Danh sách Khách hàng",
             "id": "Id của khách hàng",
-            "cust_nm_v": "Tên khách hàng (TV)",
+            "cust_nm_v": "Tên khách hàng",
             "cust_nm_e": "Tên khách hàng (TA)",
             "cust_nm_short": "Tên viết tắt",
             "cust_tp": "Loại KH",
@@ -254,7 +254,7 @@
             "titleList": "Danh sách Nhà cung cấp",
             "titleView": "Xem chi tiết nhà cung ứng {{name}}",
             "id": "Id của nhà cung ứng",
-            "vender_nm_v": "Tên nhà cung ứng (TV)",
+            "vender_nm_v": "Tên nhà cung ứng",
             "vender_nm_e": "Tên nhà cung ứng (TA)",
             "vender_nm_short": "Tên viết tắt",
             "address": "Địa chỉ",
